feat: adiciona verificação e exibição de serviços duplicados
- Implementa função `identificar_servicos_duplicados()` para detectar serviços repetidos
  para a mesma combinação de obra/data/equipe
- Adiciona função `exibir_servicos_repetidos()` com saída formatada
- Inclui tratamento de erros robusto em ambas funções
- Adiciona método auxiliar `_get_dados_repetidos()` para separação de responsabilidades
- Chama automaticamente `fechar()` quando duplicatas são encontradas

As funções ajudam a identificar casos como:
[OMI-25-0053, 31/01/2025, MT006] com serviço 3006974 duplicado

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
+
+vscode
+codegpt
 Venv
-chromedriver-win64
 chromedriver-win32
-geckodriver-v0.35.0-win32.zip
-geckodriver.exe
-dados_apontamento.xlsx
+chromedriver-win64
